Razensoft.Trade.Pine/Grammar/PineScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PineScript.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class PineScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		QuestionMark=1, Colon=2, Equals=3, NotEquals=4, GreaterThan=5, LessThan=6, 
		GreaterThanOrEquals=7, LessThanOrEquals=8, Plus=9, Minus=10, Multiply=11, 
		Divide=12, Modulo=13, Comma=14, Arrow=15, OpenParen=16, CloseParen=17, 
		OpenBracket=18, CloseBracket=19, Define=20, Assign=21, Or=22, And=23, 
		Not=24, If=25, Else=26, For=27, To=28, By=29, Break=30, Continue=31, NALiteral=32, 
		IntLiteral=33, FloatLiteral=34, BoolLiteral=35, StringLiteral=36, ColorLiteral=37, 
		Identifier=38, Begin=39, End=40, Whitespace=41;
	public const int
		RULE_script = 0, RULE_block = 1, RULE_statementList = 2, RULE_statement = 3, 
		RULE_variableDeclarationStatement = 4, RULE_variableAssignmentStatement = 5, 
		RULE_variableValue = 6, RULE_functionDeclarationStatement = 7, RULE_functionParameters = 8, 
		RULE_functionBody = 9, RULE_functionCallStatement = 10, RULE_functionArguments = 11, 
		RULE_namedFunctionArgument = 12, RULE_ifStatement = 13, RULE_ifStatementElseBody = 14, 
		RULE_forStatement = 15, RULE_forStatementCounter = 16, RULE_forStatementBody = 17, 
		RULE_expression = 18, RULE_literal = 19, RULE_seriesAccess = 20;
	public static readonly string[] ruleNames = {
		"script", "block", "statementList", "statement", "variableDeclarationStatement", 
		"variableAssignmentStatement", "variableValue", "functionDeclarationStatement", 
		"functionParameters", "functionBody", "functionCallStatement", "functionArguments", 
		"namedFunctionArgument", "ifStatement", "ifStatementElseBody", "forStatement", 
		"forStatementCounter", "forStatementBody", "expression", "literal", "seriesAccess"
	};

	private static readonly string[] _LiteralNames = {
		null, "'?'", "':'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "','", "'=>'", "'('", "')'", "'['", "']'", 
		"'='", "':='", "'or'", "'and'", "'not'", "'if'", "'else'", "'for'", "'to'", 
		"'by'", "'break'", "'continue'", "'na'", null, null, null, null, null, 
		null, "'|BEGIN|'", "'|END|'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "QuestionMark", "Colon", "Equals", "NotEquals", "GreaterThan", "LessThan", 
		"GreaterThanOrEquals", "LessThanOrEquals", "Plus", "Minus", "Multiply", 
		"Divide", "Modulo", "Comma", "Arrow", "OpenParen", "CloseParen", "OpenBracket", 
		"CloseBracket", "Define", "Assign", "Or", "And", "Not", "If", "Else", 
		"For", "To", "By", "Break", "Continue", "NALiteral", "IntLiteral", "FloatLiteral", 
		"BoolLiteral", "StringLiteral", "ColorLiteral", "Identifier", "Begin", 
		"End", "Whitespace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PineScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static PineScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PineScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PineScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterScript(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitScript(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; statementList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ITerminalNode Begin() { return GetToken(PineScriptParser.Begin, 0); }
		public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public ITerminalNode End() { return GetToken(PineScriptParser.End, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; Match(Begin);
			State = 45; statementList();
			State = 46; Match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementListContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterStatementList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitStatementList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementListContext statementList() {
		StatementListContext _localctx = new StatementListContext(Context, State);
		EnterRule(_localctx, 4, RULE_statementList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 48; statement();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << Identifier) | (1L << Begin))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public VariableDeclarationStatementContext variableDeclarationStatement() {
			return GetRuleContext<VariableDeclarationStatementContext>(0);
		}
		public VariableAssignmentStatementContext variableAssignmentStatement() {
			return GetRuleContext<VariableAssignmentStatementContext>(0);
		}
		public FunctionDeclarationStatementContext functionDeclarationStatement() {
			return GetRuleContext<FunctionDeclarationStatementContext>(0);
		}
		public FunctionCallStatementContext functionCallStatement() {
			return GetRuleContext<FunctionCallStatementContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 53; block();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 54; variableDeclarationStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 55; variableAssignmentStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 56; functionDeclarationStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 57; functionCallStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 58; ifStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 59; forStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclarationStatementContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(PineScriptParser.Identifier, 0); }
		public ITerminalNode Define() { return GetToken(PineScriptParser.Define, 0); }
		public VariableValueContext variableValue() {
			return GetRuleContext<VariableValueContext>(0);
		}
		public VariableDeclarationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclarationStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterVariableDeclarationStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitVariableDeclarationStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclarationStatementContext variableDeclarationStatement() {
		VariableDeclarationStatementContext _localctx = new VariableDeclarationStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_variableDeclarationStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(Identifier);
			State = 63; Match(Define);
			State = 64; variableValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableAssignmentStatementContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(PineScriptParser.Identifier, 0); }
		public ITerminalNode Assign() { return GetToken(PineScriptParser.Assign, 0); }
		public VariableValueContext variableValue() {
			return GetRuleContext<VariableValueContext>(0);
		}
		public VariableAssignmentStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableAssignmentStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterVariableAssignmentStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitVariableAssignmentStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableAssignmentStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableAssignmentStatementContext variableAssignmentStatement() {
		VariableAssignmentStatementContext _localctx = new VariableAssignmentStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_variableAssignmentStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; Match(Identifier);
			State = 67; Match(Assign);
			State = 68; variableValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableValueContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public VariableValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterVariableValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitVariableValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableValueContext variableValue() {
		VariableValueContext _localctx = new VariableValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_variableValue);
		try {
			State = 73;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Minus:
			case OpenParen:
			case Not:
			case NALiteral:
			case IntLiteral:
			case FloatLiteral:
			case BoolLiteral:
			case StringLiteral:
			case ColorLiteral:
			case Identifier:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70; expression(0);
				}
				break;
			case If:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71; ifStatement();
				}
				break;
			case For:
				EnterOuterAlt(_localctx, 3);
				{
				State = 72; forStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationStatementContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(PineScriptParser.Identifier, 0); }
		public ITerminalNode OpenParen() { return GetToken(PineScriptParser.OpenParen, 0); }
		public ITerminalNode CloseParen() { return GetToken(PineScriptParser.CloseParen, 0); }
		public ITerminalNode Arrow() { return GetToken(PineScriptParser.Arrow, 0); }
		public FunctionBodyContext functionBody() {
			return GetRuleContext<FunctionBodyContext>(0);
		}
		public FunctionParametersContext functionParameters() {
			return GetRuleContext<FunctionParametersContext>(0);
		}
		public FunctionDeclarationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclarationStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterFunctionDeclarationStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitFunctionDeclarationStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationStatementContext functionDeclarationStatement() {
		FunctionDeclarationStatementContext _localctx = new FunctionDeclarationStatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_functionDeclarationStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(Identifier);
			State = 76; Match(OpenParen);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Identifier) {
				{
				State = 77; functionParameters();
				}
			}

			State = 80; Match(CloseParen);
			State = 81; Match(Arrow);
			State = 82; functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParametersContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(PineScriptParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(PineScriptParser.Identifier, i);
		}
		public ITerminalNode[] Comma() { return GetTokens(PineScriptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(PineScriptParser.Comma, i);
		}
		public FunctionParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameters; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterFunctionParameters(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitFunctionParameters(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParametersContext functionParameters() {
		FunctionParametersContext _localctx = new FunctionParametersContext(Context, State);
		EnterRule(_localctx, 16, RULE_functionParameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; Match(Identifier);
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 85; Match(Comma);
				State = 86; Match(Identifier);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionBodyContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterFunctionBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitFunctionBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionBodyContext functionBody() {
		FunctionBodyContext _localctx = new FunctionBodyContext(Context, State);
		EnterRule(_localctx, 18, RULE_functionBody);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Begin:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92; block();
				}
				break;
			case Minus:
			case OpenParen:
			case Not:
			case NALiteral:
			case IntLiteral:
			case FloatLiteral:
			case BoolLiteral:
			case StringLiteral:
			case ColorLiteral:
			case Identifier:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallStatementContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(PineScriptParser.Identifier, 0); }
		public ITerminalNode OpenParen() { return GetToken(PineScriptParser.OpenParen, 0); }
		public ITerminalNode CloseParen() { return GetToken(PineScriptParser.CloseParen, 0); }
		public FunctionArgumentsContext functionArguments() {
			return GetRuleContext<FunctionArgumentsContext>(0);
		}
		public FunctionCallStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCallStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.EnterFunctionCallStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPineScriptListener typedListener = listener as IPineScriptListener;
			if (typedListener != null) typedListener.ExitFunctionCallStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPineScriptVisitor<TResult> typedVisitor = visitor as IPineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCallStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallStatementContext functionCallStatement() {
		FunctionCallStatementContext _localctx = new FunctionCallStatementContext(Context, State);
		EnterRule(_localctx, 20, RULE_functionCallStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(Identifier);
			State = 97; Match(OpenParen);
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Minus) | (1L << OpenParen) | (1L << Not) | (1L << NALiteral) | (1L << IntLiteral) | (1L << FloatLiteral) | (1L << BoolLiteral) | (1L << StringLiteral) | (1L << ColorLiteral) | (1L << Identifier))) != 0)) {
				{
				State = 98; functionArguments();
				}
			}

			State = 101; Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
